--- a/.github/workflows/pr-metadata-checks.yml
+++ b/.github/workflows/pr-metadata-checks.yml
@@ -1,14 +1,18 @@
 name: Check Pull Request Metadata
 on:
-  pull_request_target:
-    # trigger when the PR title changes
-    types: [opened, edited, reopened]
-
+  pull_request:
+    types:
+      - opened
+      - edited
+      - reopened
 jobs:
-  pr-title:
+  check-pr-title:
     runs-on: ubuntu-22.04
     permissions:
-      pull-requests: write # post comments when the PR title doesn't match the "Conventional Commits" rules
+      pull-requests: write # conventional-commits-pr-action: PR comments
     steps:
-      - name: Check Pull Request title
-        uses: bonitasoft/actions/packages/pr-title-conventional-commits@v2
+      - name: Check pull request title
+        uses: jef/conventional-commits-pr-action@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          comment: true # Post a comment in the pull request conversation with examples.
