--- a/.github/workflows/deploy-demo.yml
+++ b/.github/workflows/deploy-demo.yml
@@ -1,4 +1,4 @@
-name: Deploy the demo
+name: Deploy the demo on GitHub Pages
 
 # Controls when the workflow will run
 on:
@@ -27,7 +27,7 @@ jobs:
   # At a minimum this job should upload artifacts using actions/upload-pages-artifact
   build:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
