--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "build-for-surge": "tsc && vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
