--- a/.github/workflows/deploy-demo.yml
+++ b/.github/workflows/deploy-demo.yml
@@ -13,6 +13,7 @@ on:
       - 'index.html'
       - 'package.json'
       - 'package-lock.json'
+      - 'tsconfig.json'
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
