--- a/.github/workflows/deploy-pr-preview.yml
+++ b/.github/workflows/deploy-pr-preview.yml
@@ -14,6 +14,7 @@ on:
       - 'index.html'
       - 'package.json'
       - 'package-lock.json'
+      - 'tsconfig.json'
 
 jobs:
   demo_preview: # keep unique across jobs using surge preview (preview url and PR comment id)
