--- a/.github/workflows/deploy-pr-preview.yml
+++ b/.github/workflows/deploy-pr-preview.yml
@@ -17,7 +17,7 @@ on:
       - 'tsconfig.json'
 
 jobs:
-  demo_preview: # keep unique across jobs using surge preview (preview url and PR comment id)
+  demo: # keep unique across jobs using surge preview (preview url and PR comment id)
     runs-on: ubuntu-22.04
     permissions:
       pull-requests: write # surge-preview: PR comments
