--- a/.github/workflows/deploy-pr-preview.yml
+++ b/.github/workflows/deploy-pr-preview.yml
@@ -17,7 +17,9 @@ on:
       - 'tsconfig.json'
 
 jobs:
-  demo: # keep unique across jobs using surge preview (preview url and PR comment id)
+  # Keep unique across jobs using surge preview (preview url and PR comment id).
+  # Use a short id to avoid reaching the surge subdomain length limit. See https://github.com/bonitasoft/actions/issues/101
+  demo:
     runs-on: ubuntu-22.04
     permissions:
       pull-requests: write # surge-preview: PR comments
