--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "build-for-surge": "tsc && vite build",
     "preview": "vite preview"
   },
+  "dependencies": {
+    "bpmn-visualization": "~0.32.0"
+  },
   "devDependencies": {
     "typescript": "~4.9.5",
     "vite": "~4.1.4"
