gh wf: build the default branch

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,12 +1,19 @@
-# TODO tsc and test
-# main and PR
-
 name: Build and Check
 
 on:
+  push:
+    branches: [ "main" ]
+    paths:
+      - '.github/actions/build/**/*'
+      - '.github/workflows/build.yml'
+      - 'src/**/*'
+      - '.nvmrc'
+      - '.xo-config.json'
+      - 'index.html'
+      - 'package.json'
+      - 'package-lock.json'
+      - 'tsconfig.json'
   pull_request:
-    # To manage 'surge-preview' action teardown, add default event types + closed event type
-    types: [opened, synchronize, reopened, closed]
     branches:
       - main
     paths:
