--- a/package.json
+++ b/package.json
@@ -5,15 +5,19 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build --base ./",
-    "build-for-surge": "tsc && vite build",
-    "preview": "vite preview --base ./"
+    "build-demo": "vite build --base ./",
+    "build-for-surge": "vite build",
+    "lint": "xo --fix",
+    "preview": "vite preview --base ./",
+    "test": "xo",
+    "ts": "tsc"
   },
   "dependencies": {
     "bpmn-visualization": "~0.32.0"
   },
   "devDependencies": {
     "typescript": "~4.9.5",
-    "vite": "~4.1.4"
+    "vite": "~4.1.4",
+    "xo": "~0.53.1"
   }
 }
