chore: simplify build and workflows
- Use a more convenient name for the npm script that does TS compilation
- Keep a single build demo npm script for simplificty
- Use the `bahmutov/npm-install` action to manage cache and dependencies install

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,6 +35,6 @@ jobs:
       - name: Build
         uses: ./.github/actions/build
         with:
-          npm-script: 'ts'
+          npm-script: 'tsc'
       - name: Check
         run: npm test
