--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build-demo": "vite build --base ./",
-    "build-for-surge": "vite build",
+    "build": "vite build --base ./",
     "lint": "xo --fix",
     "preview": "vite preview --base ./",
     "test": "xo",
